# hybrid-rag-excel-analyst

./: .cursorignore  .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
.streamlit/: config.toml  credentials.toml.example
apps/: streamlit_app.py
docs/: CI_CD.md  PLANO.md
docs/example-data/: retail_sample_q1_2024.xlsx
src/excel_analyst/: __init__.py
src/excel_analyst/execution/: __init__.py  engine.py  errors.py  plan.py
src/excel_analyst/ingest/: __init__.py  errors.py  loaders.py
src/excel_analyst/insights/: __init__.py  signals.py
src/excel_analyst/llm/: __init__.py  plan_llm.py  settings.py
src/excel_analyst/orchestration/: __init__.py  insights_pipeline.py  intent.py  pipeline.py
src/excel_analyst/retrieval/: __init__.py  metadata_rag.py
src/excel_analyst/schema_analysis/: __init__.py  analyzer.py  models.py
tests/: test_ingest.py
