[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hybrid-rag-excel-analyst"
version = "0.1.0"
description = "Hybrid RAG + structured analytics for Excel/CSV"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.2",
  "openpyxl>=3.1",
  "pyarrow>=15",
  "duckdb>=1.0",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
  "chromadb>=0.5",
  "openai>=1.40",
  "streamlit>=1.33",
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint.per-file-ignores]
"apps/streamlit_app.py" = ["E402"]
